icon bug fixed and fonts icon added

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@
 	background-size: 22px 27px; 
 }
 
-#home .ui-icon { 
+#home-icon .ui-icon { 
 	background:  url(../img/glyphish-icons/53-house.png) 50% 50% no-repeat;  
 	background-size: 22px 22px; 
 }
